--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-sharp": "^2.1.8",
+    "googleapis": "^40.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-modal": "^3.8.1",
+    "react-slick": "^0.24.0",
+    "slick-carousel": "^1.8.1"
   },
   "keywords": [
     "gatsby"
